--- a/app/src/main/res/layout/activity_download_list.xml
+++ b/app/src/main/res/layout/activity_download_list.xml
@@ -47,21 +47,43 @@
             </LinearLayout>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+        <ml.puredark.hviewer.customs.ExTabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:background="@color/white"
+            app:tabBackground="@color/transparent"
+            app:tabIcon1="@drawable/selector_download_primary"
+            app:tabIcon2="@drawable/selector_folder_image"
+            app:tabIndicatorColor="@color/colorPrimary"
+            app:tabIndicatorHeight="2dp"
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="@color/colorPrimaryDark"
+            app:tabTextColor="@color/colorPrimaryDark"
+            app:tabTitleArray="当前任务,已完成" />
 
-        <include layout="@layout/view_collection_list" />
+        <ml.puredark.hviewer.customs.ExViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/tab_layout"
+            app:pagerCurrItem="0"
+            app:pagerLayout1="@layout/view_collection_list"
+            app:pagerLayout2="@layout/view_collection_list" />
 
         <View
             android:id="@+id/shadowDown"
             android:layout_width="match_parent"
             android:layout_height="4dp"
+            android:layout_below="@id/tab_layout"
             android:background="@drawable/shadow_bottom" />
     </RelativeLayout>
+
 
 </android.support.design.widget.CoordinatorLayout>
