added flags to Site to let user do some adjustments

--- a/app/src/main/res/layout/view_site_details.xml
+++ b/app/src/main/res/layout/view_site_details.xml
@@ -43,6 +43,13 @@
             app:met_clearButton="true"
             app:met_floatingLabelText="搜索URL"/>
         <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/input_flag"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/EditTextAddSite"
+            app:met_clearButton="true"
+            app:met_floatingLabelText="FLAG（可选）"/>
+        <com.rengwuxian.materialedittext.MaterialEditText
             android:id="@+id/input_cookie"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
