--- a/app/src/main/res/layout/item_collection.xml
+++ b/app/src/main/res/layout/item_collection.xml
@@ -16,10 +16,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="145dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <RelativeLayout
+            android:id="@+id/layout_cover"
+            android:visibility="gone"
             android:layout_width="105dp"
             android:layout_height="145dp">
 
