--- a/app/src/main/res/layout/activity_picture_viewer.xml
+++ b/app/src/main/res/layout/activity_picture_viewer.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/view_pager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/black_90"
+                android:background="@color/black"
                 android:fitsSystemWindows="false"
                 app:pagerCurrItem="0"
                 app:pagerLayout1="@layout/view_picture_viewer" />
