switch from Glide to Fresco; Use PhotoDraweeView to support Fresco and zooming

--- a/app/src/main/res/layout/view_collection_index.xml
+++ b/app/src/main/res/layout/view_collection_index.xml
@@ -13,6 +13,6 @@
         android:layout_height="match_parent"
         app:layoutManager="GridLayoutManager"
         app:spanCount="3"
-        tools:listitem="@layout/item_picture_index"></com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView>
+        tools:listitem="@layout/item_picture_index"/>
 
 </LinearLayout>
