--- a/app/src/main/res/layout/activity_add_site.xml
+++ b/app/src/main/res/layout/activity_add_site.xml
@@ -7,119 +7,123 @@
     android:layout_height="match_parent"
     tools:context=".activities.CollectionActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="-16dp"
-            android:paddingEnd="16dp"
-            android:clipChildren="false"
-            android:clipToPadding="false"
-            app:contentInsetStart="0dp"
-            app:layout_collapseMode="pin"
-            android:fitsSystemWindows="true"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <ImageView
-                    android:id="@+id/btn_return"
-                    android:layout_width="@dimen/tool_bar_height"
-                    android:layout_height="@dimen/tool_bar_height"
-                    android:background="@drawable/bg_button"
-                    android:padding="16dp"
-                    android:scaleType="fitXY" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="添加新站点"
-                    android:textAppearance="@style/ActionBar.Title" />
-
-                <ImageView
-                    android:id="@+id/btn_json_input"
-                    android:layout_width="@dimen/tool_bar_height"
-                    android:layout_height="@dimen/tool_bar_height"
-                    android:padding="14dp"
-                    android:background="@drawable/bg_button"
-                    app:srcCompat="@drawable/ic_json_white"/>
-
-                <ImageView
-                    android:id="@+id/btn_qr_scan"
-                    android:layout_width="@dimen/tool_bar_height"
-                    android:layout_height="@dimen/tool_bar_height"
-                    android:padding="16dp"
-                    android:background="@drawable/bg_button"
-                    app:srcCompat="@drawable/ic_qrcode_scan_white"/>
-            </LinearLayout>
-        </android.support.v7.widget.Toolbar>
-    </android.support.design.widget.AppBarLayout>
-
-    <RelativeLayout
-        android:id="@+id/edittext_container"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/tool_bar_height"
-        android:background="@color/white">
-
-        <View
-            android:id="@+id/shadowDown"
+        android:orientation="vertical">
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/app_bar"
             android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:background="@drawable/shadow_bottom" />
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
 
-        <LinearLayout
-            android:id="@+id/view_add_site_json"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:orientation="vertical"
-            android:visibility="gone"
-            android:padding="@dimen/uni_padding">
-
-            <com.rengwuxian.materialedittext.MaterialEditText
-                android:id="@+id/input_site"
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="top"
-                android:hint="在这粘贴新的规则，或点击右上角扫描二维码"
-                android:minLines="10"
-                android:maxLines="18"
-                android:textSize="13sp"
-                app:met_baseColor="@color/colorPrimaryDark"
-                app:met_clearButton="true"
-                app:met_floatingLabel="highlight"
-                app:met_floatingLabelAlwaysShown="true"
-                app:met_floatingLabelText="站点规则"
-                app:met_floatingLabelTextSize="16sp"
-                app:met_primaryColor="@color/colorPrimaryDark"/>
+                android:paddingStart="-16dp"
+                android:paddingEnd="16dp"
+                android:clipChildren="false"
+                android:clipToPadding="false"
+                app:contentInsetStart="0dp"
+                app:layout_collapseMode="pin"
+                android:fitsSystemWindows="true"
+                app:popupTheme="@style/AppTheme.PopupOverlay">
 
-            <com.gc.materialdesign.views.ButtonFlat
-                android:id="@+id/btn_parse_json"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:background="@color/colorPrimary"
-                android:text="分析规则" />
-        </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-        <include layout="@layout/view_site_details"
-            android:visibility="visible"
-            android:id="@+id/view_site_details"/>
+                    <ImageView
+                        android:id="@+id/btn_return"
+                        android:layout_width="@dimen/tool_bar_height"
+                        android:layout_height="@dimen/tool_bar_height"
+                        android:background="@drawable/bg_button"
+                        android:padding="16dp"
+                        android:scaleType="fitXY" />
 
-    </RelativeLayout>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:text="添加新站点"
+                        android:textAppearance="@style/ActionBar.Title" />
+
+                    <ImageView
+                        android:id="@+id/btn_json_input"
+                        android:layout_width="@dimen/tool_bar_height"
+                        android:layout_height="@dimen/tool_bar_height"
+                        android:padding="14dp"
+                        android:background="@drawable/bg_button"
+                        app:srcCompat="@drawable/ic_json_white"/>
+
+                    <ImageView
+                        android:id="@+id/btn_qr_scan"
+                        android:layout_width="@dimen/tool_bar_height"
+                        android:layout_height="@dimen/tool_bar_height"
+                        android:padding="16dp"
+                        android:background="@drawable/bg_button"
+                        app:srcCompat="@drawable/ic_qrcode_scan_white"/>
+                </LinearLayout>
+            </android.support.v7.widget.Toolbar>
+        </android.support.design.widget.AppBarLayout>
+        <RelativeLayout
+            android:id="@+id/edittext_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white">
+
+            <View
+                android:id="@+id/shadowDown"
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:background="@drawable/shadow_bottom" />
+
+            <LinearLayout
+                android:id="@+id/view_add_site_json"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:orientation="vertical"
+                android:visibility="gone"
+                android:padding="@dimen/uni_padding">
+
+                <com.rengwuxian.materialedittext.MaterialEditText
+                    android:id="@+id/input_site"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="top"
+                    android:hint="在这粘贴新的规则，或点击右上角扫描二维码"
+                    android:minLines="10"
+                    android:maxLines="18"
+                    android:textSize="13sp"
+                    app:met_baseColor="@color/colorPrimaryDark"
+                    app:met_clearButton="true"
+                    app:met_floatingLabel="highlight"
+                    app:met_floatingLabelAlwaysShown="true"
+                    app:met_floatingLabelText="站点规则"
+                    app:met_floatingLabelTextSize="16sp"
+                    app:met_primaryColor="@color/colorPrimaryDark"/>
+
+                <com.gc.materialdesign.views.ButtonFlat
+                    android:id="@+id/btn_parse_json"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    android:background="@color/colorPrimary"
+                    android:text="分析规则" />
+            </LinearLayout>
+
+            <include layout="@layout/view_site_details"
+                android:visibility="visible"
+                android:id="@+id/view_site_details"/>
+
+        </RelativeLayout>
+    </LinearLayout>
 
     <com.github.clans.fab.FloatingActionButton
         android:id="@+id/fab_submit"
