--- a/app/src/main/res/layout/activity_picture_viewer.xml
+++ b/app/src/main/res/layout/activity_picture_viewer.xml
@@ -18,14 +18,12 @@
             android:orientation="vertical"
             android:fitsSystemWindows="false">
 
-            <ml.puredark.hviewer.customs.ExViewPager
+            <ml.puredark.hviewer.customs.MultiTouchViewPager
                 android:id="@+id/view_pager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/black"
-                android:fitsSystemWindows="false"
-                app:pagerCurrItem="0"
-                app:pagerLayout1="@layout/view_picture_viewer" />
+                android:background="@color/black_90"
+                android:fitsSystemWindows="false" />
 
             <LinearLayout
                 android:layout_width="match_parent"
