--- a/app/src/main/res/layout/item_collection_grid.xml
+++ b/app/src/main/res/layout/item_collection_grid.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -40,13 +41,11 @@
                 android:padding="30dp"
                 app:srcCompat="@drawable/ic_gallery_white" />
 
-            <ImageView
+            <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/iv_cover"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true" />
+                fresco:actualImageScaleType="focusCrop"/>
 
         </RelativeLayout>
     </com.balysv.materialripple.MaterialRippleLayout>
