--- a/app/src/main/res/layout/item_picture_index.xml
+++ b/app/src/main/res/layout/item_picture_index.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginBottom="4dp"
@@ -25,11 +26,11 @@
             android:padding="30dp"
             app:srcCompat="@drawable/ic_gallery_white" />
 
-        <ImageView
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/iv_picture"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop" />
+            fresco:actualImageScaleType="focusCrop"/>
 
     </RelativeLayout>
 
