--- a/app/src/main/res/layout/view_picture_viewer.xml
+++ b/app/src/main/res/layout/view_picture_viewer.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ml.puredark.hviewer.customs.PinchImageView
+    <me.relex.photodraweeview.PhotoDraweeView
         android:id="@+id/iv_picture"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
     <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
         android:id="@+id/progress_bar"
         android:layout_width="60dp"
