--- a/app/src/main/res/layout/item_collection.xml
+++ b/app/src/main/res/layout/item_collection.xml
@@ -37,7 +37,7 @@
                 android:id="@+id/iv_cover"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                fresco:actualImageScaleType="focusCrop"/>
+                fresco:actualImageScaleType="centerCrop"/>
 
         </RelativeLayout>
 
