--- a/app/src/main/res/layout/item_collection_grid.xml
+++ b/app/src/main/res/layout/item_collection_grid.xml
@@ -45,7 +45,7 @@
                 android:id="@+id/iv_cover"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                fresco:actualImageScaleType="focusCrop"/>
+                fresco:actualImageScaleType="centerCrop"/>
 
         </RelativeLayout>
     </com.balysv.materialripple.MaterialRippleLayout>
