--- a/app/src/main/res/layout/item_picture_index.xml
+++ b/app/src/main/res/layout/item_picture_index.xml
@@ -30,7 +30,7 @@
             android:id="@+id/iv_picture"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            fresco:actualImageScaleType="focusCrop"/>
+            fresco:actualImageScaleType="centerCrop"/>
 
     </RelativeLayout>
 
