added browse in browser fab

--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -130,6 +130,15 @@
         app:menu_labels_singleLine="true">
 
         <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_browser"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/selector_web"
+            app:fab_colorNormal="@color/colorAccent"
+            app:fab_label="浏览器"
+            app:fab_size="mini" />
+
+        <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fab_favor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
