--- a/app/src/main/res/layout/view_picture_viewer.xml
+++ b/app/src/main/res/layout/view_picture_viewer.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fresco="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:background="@color/black_90">
 
     <me.relex.photodraweeview.PhotoDraweeView
         android:id="@+id/iv_picture"
@@ -15,5 +17,13 @@
         android:layout_height="60dp"
         android:layout_centerInParent="true"
         android:background="@color/white_80"/>
+    <ImageView
+        android:id="@+id/btn_refresh"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        app:srcCompat="@drawable/ic_refresh_white"/>
+
 
 </RelativeLayout>
