--- a/app/src/main/res/layout/activity_collection_list.xml
+++ b/app/src/main/res/layout/activity_collection_list.xml
@@ -17,14 +17,15 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="-16dp"
+            android:paddingStart="-16dp"
+            android:paddingEnd="16dp"
             app:contentInsetStart="0dp"
             app:layout_collapseMode="pin"
             android:fitsSystemWindows="true"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clipChildren="false"
                 android:clipToPadding="false">
@@ -39,11 +40,20 @@
 
                 <TextView
                     android:id="@+id/tv_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/tool_bar_height"
+                    android:layout_weight="1"
                     android:gravity="center"
                     android:text=""
                     android:textAppearance="@style/ActionBar.Title" />
+
+                <ImageView
+                    android:id="@+id/btn_clear_all"
+                    android:layout_width="@dimen/tool_bar_height"
+                    android:layout_height="@dimen/tool_bar_height"
+                    android:padding="14dp"
+                    android:background="@drawable/bg_button"
+                    app:srcCompat="@drawable/ic_clear_all_white"/>
             </LinearLayout>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
