--- a/app/src/main/res/layout/activity_picture_viewer.xml
+++ b/app/src/main/res/layout/activity_picture_viewer.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="false"
@@ -10,45 +11,38 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:fitsSystemWindows="false">
 
-        <RelativeLayout
+        <ml.puredark.hviewer.customs.MultiTouchViewPager
+            android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:fitsSystemWindows="false">
+            android:background="@color/black_90"
+            android:fitsSystemWindows="false" />
 
-            <ml.puredark.hviewer.customs.MultiTouchViewPager
-                android:id="@+id/view_pager"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/black_90"
-                android:fitsSystemWindows="false" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@color/black_10"
+            android:gravity="center_vertical"
+            android:minHeight="50dp"
+            android:orientation="horizontal"
+            android:paddingBottom="@dimen/uni_padding"
+            android:paddingLeft="36dp"
+            android:paddingRight="36dp"
+            android:paddingTop="@dimen/uni_padding">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/tv_count"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:background="@color/black_10"
-                android:gravity="center_vertical"
-                android:minHeight="50dp"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/uni_padding"
-                android:paddingLeft="36dp"
-                android:paddingRight="36dp"
-                android:paddingTop="@dimen/uni_padding">
-
-                <TextView
-                    android:id="@+id/tv_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:textColor="@color/white"
-                    android:textSize="14sp"
-                    tools:text="10/12" />
-            </LinearLayout>
-        </RelativeLayout>
-
+                android:layout_marginLeft="20dp"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                tools:text="10/12" />
+        </LinearLayout>
     </RelativeLayout>
 
 </LinearLayout>
