--- a/app/src/main/res/layout/item_nav_menu.xml
+++ b/app/src/main/res/layout/item_nav_menu.xml
@@ -46,6 +46,7 @@
             android:id="@+id/switch_list_grid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/half_margin"
             app:base_release_color="@color/colorPrimaryDark"
             app:base_press_color="@color/colorPrimaryDark"
             app:ball_release_color="@color/colorPrimary"
