--- a/app/src/main/res/layout/item_collection.xml
+++ b/app/src/main/res/layout/item_collection.xml
@@ -85,6 +85,7 @@
                             android:id="@+id/tv_uploader"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:maxLines="1"
                             android:textColor="@color/grey"
                             android:textSize="12sp"
                             tools:text="by uploader" />
@@ -99,6 +100,7 @@
                             android:id="@+id/tv_category"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:maxLines="1"
                             android:textColor="@color/grey"
                             android:textSize="12sp"
                             tools:text="Game CG Sets" />
