--- a/app/src/main/res/layout/view_collection_desciption.xml
+++ b/app/src/main/res/layout/view_collection_desciption.xml
@@ -104,5 +104,15 @@
                 android:textSize="12sp"
                 tools:text="2014-03-18 15:20" />
         </LinearLayout>
+        <TextView
+            android:id="@+id/tv_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            tools:text="Zettai ryouiki-specific and other fetish stockings close-up shots.
+
+Pool and it's name are in reference to MPZero's signature set closing shot.
+
+This is the best pool btw <3"/>
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
