--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,6 +13,7 @@
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="nav_header_height_plus_margin">168dp</dimen>
     <dimen name="nav_category_header_height">100dp</dimen>
+    <dimen name="item_site_height">48dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="tool_bar_height">56dp</dimen>
