move advRV to libraries package, fix bugs with sorting sites and groups

--- a/app/src/main/res/layout/item_site_group.xml
+++ b/app/src/main/res/layout/item_site_group.xml
@@ -42,7 +42,7 @@
             android:textColor="@color/black"
             android:textSize="18sp"
             tools:text="未分类" />
-        <ml.puredark.hviewer.customs.advrecyclerview.common.widget.ExpandableItemIndicator
+        <ml.puredark.hviewer.libraries.advrecyclerview.common.widget.ExpandableItemIndicator
             android:id="@+id/indicator"
             android:layout_width="24dp"
             android:layout_height="24dp"
