--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -55,7 +55,7 @@
         android:title="@string/settings_download">
 
         <CheckBoxPreference
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:key="pref_download_high_res"
             android:title="@string/settings_download_high_res"
             android:summary="@string/settings_download_high_res_summary"/>
