switch to Document API

--- a/app/src/main/res/layout/item_download_task.xml
+++ b/app/src/main/res/layout/item_download_task.xml
@@ -21,6 +21,7 @@
         android:orientation="horizontal">
 
         <RelativeLayout
+            android:id="@+id/layout_cover"
             android:layout_width="105dp"
             android:layout_height="145dp">
 
