Site market completed; updated to v0.6.0

--- a/app/src/main/res/layout/nav_main.xml
+++ b/app/src/main/res/layout/nav_main.xml
@@ -7,7 +7,7 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/nav_header_view"
         android:layout_width="match_parent"
         android:layout_height="@dimen/nav_header_height"
@@ -20,7 +20,28 @@
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:src="@drawable/polygon_5" />
-    </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/btn_site_market"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:gravity="center">
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                app:srcCompat="@drawable/ic_shopping_basket_white"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/half_margin"
+                android:textColor="@color/white"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:text="站点市场"/>
+        </LinearLayout>
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_site"
